[package]
authors = ["Dylan MacKenzie <ecstaticmorse@gmail.com>"]
name = "ksuid"
version = "0.1.0"

keywords = ["uuid", "ksuid", "guid"]
license = "MIT"

[[bin]]
doc = false
name = "ksuid"

[dependencies]
byteorder = "1.0.0"
docopt = "0.8.0"
rand = "0.3.15"
resize-slice = "0.1.2"
serde = "1.0.8"
serde_derive = "1.0.8"
time = "0.1.37"

[dev-dependencies]
num = "0.1.39"
